Adicionando estado compartilhado